# persistent-cost

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: benchmark_numerical_precision.py  benchmark_persistence.py  benchmark_pivot.py
docs/: index.html  viewer.js
docs/results/: circulo_en_toro_n100_20251120_133918.json  circulo_en_toro_n20_20251121_163721.json  circulo_en_toro_n20_20251121_164258.json  circulo_en_toro_n20_20251121_174428.json  circulo_en_toro_n20_seed42.json  circulo_en_toro_n20_seed42_eps0.0.json  circulo_en_toro_n20_seed42_eps0.001.json  circulo_en_toro_n20_seed42_eps0.01.json  circulo_en_toro_n50_20251120_133908.json  circulo_en_toro_n50_20251121_163722.json  circulo_en_toro_n50_20251121_164258.json  circulo_en_toro_n50_20251121_174428.json  circulo_en_toro_n50_seed42.json  circulo_en_toro_n50_seed42_eps0.0.json  circulo_en_toro_n50_seed42_eps0.001.json  circulo_en_toro_n50_seed42_eps0.01.json  inclusion_punto_n100_20251120_133638.json  inclusion_punto_n20_20251121_152741.json  inclusion_punto_n20_seed42.json  (+82 more)
examples/: demo.ipynb  demo_cone.ipynb  demo_cone_gd_torus.ipynb  profile_cylinder.py
experiments/: EXPERIMENTOS.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  analysis_cone_bars.ipynb  analyze_results.py  config.py  explore_results.py  generate_cone_bars.py  generate_spaces.py  quick_test.py  results_viewer.html  run_all.sh  run_experiments.py  test_system.py  viewer.js  visualization.py
tests/: README_HTR_TESTS.md  test_algorithms_accel.py  test_cilinder.py  test_cylinder.py  test_htr.py  test_utils.py
viewer/: index.html  viewer.js
(+36 files in other folders)
