[build-system]
requires = [
    "setuptools>=45",
    "setuptools-scm[toml]>=6.2",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.22",
]
build-backend = "setuptools.build_meta"

[project]
name = "persistent-cost"
version = "0.1.0"
description = "Persistent homology cost computation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "gudhi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "fire>=0.5",
]
accel = [
    "numba>=0.58",
    "Cython>=0.29.36",
]

[tool.setuptools]
packages = ["persistent_cost"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
persistent_cost = ["py.typed"]
